kubernetes/prod/nextcloud/nextcloud/deployment_nextcloud.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  namespace: nextcloud
  labels:
    app: nextcloud
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: nextcloud
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      securityContext:
        fsGroup: 100
      containers:
        - name: nextcloud
          image: nextcloud:31.0.7-apache # {"$imagepolicy": "flux-system:nextcloud"}
          securityContext:
            runAsUser: 1059
            runAsGroup: 100
          ports:
            - containerPort: 80
              protocol: TCP
          volumeMounts:
            - mountPath: /var/www/html
              name: varwwwhtml
            #- mountPath: /config/configuration.yaml
            #  subPath: configuration.yaml
            #  name: configmap-file
      volumes:
        - name: varwwwhtml
          persistentVolumeClaim:
            claimName: pvc-nextcloud-synology
        #- name: configmap-file
        #  configMap:
        #    name: nextcloud-configmap
