kubernetes/prod/nextcloud/nextcloud/services.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: nextcloud
  name: nextcloud
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: nextcloud
---
apiVersion: v1
kind: Service
metadata:
  namespace: nextcloud
  name: nextcloud-redis
spec:
  type: ClusterIP
  ports:
    - port: 6379
      targetPort: 6379
      protocol: TCP
  selector:
    app: nextcloud-redis
---
