kubernetes/prod/nextcloud/nextcloud/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud
  namespace: nextcloud
  labels:
    app.kubernetes.io/instance: nextcloud
    app.kubernetes.io/name: nextcloud
spec:
  ingressClassName: traefik
  rules:
  - host: cloud.nmoura.pt
    http:
      paths:
        - backend:
            service:
              name: nextcloud
              port:
                number: 8080
          path: /
          pathType: Prefix
    tls: 
      secretName: nmoura-pt-tls
      hosts:
        - cloud.nmoura.pt
